--- a/plugin.xml
+++ b/plugin.xml
@@ -74,8 +74,8 @@
 		<source-file src="src/android/com/android/vending/billing/IInAppBillingService.aidl" target-dir="app/src/main/aidl/com/android/vending/billing" />
 
 		<!-- Billing Key String Holder -->
-		<resource-file src="src/android/res/values/billing_key.xml" target="app/src/main/res/values/billing_key.xml" />
-		<config-file target="res/values/billing_key.xml" parent="/*">
+		<source-file src="src/android/res/values/billing_key.xml" target-dir="app/src/main/res/values" />
+		<config-file target="app/src/main/res/values/billing_key.xml" parent="/*">
 			<string name="billing_key">$BILLING_KEY</string>
 		</config-file>
 	</platform>
